--- a/frontend/src/views/teacher/mycourses/MyCourse.css
+++ b/frontend/src/views/teacher/mycourses/MyCourse.css
@@ -1,6 +1,7 @@
 .MyCourse {
     background-color: #F5F5F5;
     width: 100%;
+    height: 90vh;
     margin-top: 20px;
 }
 
@@ -8,7 +9,7 @@
     padding: 3rem;
     display: flex;
     justify-content: space-between;
-    width: 1500px;
+    width: 100%;
 }
 
 .MyCourse-button button {
